--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
       </form>
       <div class="loader visually-hidden"></div>
       <ul class="gallery"></ul>
+      <button class="load-more visually-hidden">Load more</button>
     </div>
     <script type="module" src="./main.js"></script>
   </body>
